--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,12 @@ font-family: 'Raleway', sans-serif;
 
 /*Start Header*/
 header {
-    padding:40px 0;
+    padding:60px 0;
     background-color: hsl(193, 100%, 96%);
     background-image: url(../images/bg-hero-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
+    margin-bottom: 120px;
 }
 @media (max-width:767px) {
     header {
@@ -62,7 +63,7 @@ header .header {
     justify-content: space-between;
 }
 header .logo {
-    width: 18%;
+    width: 22%;
 }
 @media (max-width:767px) {
     header .logo {
@@ -87,7 +88,7 @@ header .btn {
     }
 }
 header .info {
-    margin: 40px 0;
+    margin: 100px 0;
 }
 header .info .info-txt {
     float: left;
@@ -115,7 +116,7 @@ header .info .info-txt .btn {
 }
 header .info .mockups {
     float: right;
-    width: 50%;
+    width: 55%;
 }
 @media (max-width:767px) {
     header .info .mockups {
@@ -127,7 +128,7 @@ header .info .mockups {
 /*End Header*/
 
 /*start section 1*/
-section.s1 {
+article.s1 {
     margin: 100px 0 40px 0;
 }
 @media (max-width:767px) {
@@ -135,8 +136,8 @@ section.s1 {
         padding: 0 20px;
     }
 }
-section.s1 .container {
-    padding: 50px 80px;
+article.s1 .container {
+    padding: 70px 90px;
     box-shadow: 0 0 10px rgb(223, 223, 223);
     border-radius: 10px;
     display: flex;
@@ -144,44 +145,44 @@ section.s1 .container {
     align-items: center;
 }
 @media (max-width:767px) {
-    section.s1 .container {
+    article.s1 .container {
         display: grid;
         padding: 40px 50px;
     }
 }
-section.s1 .container .text {
+article.s1 .container .text {
     padding-right: 80px;
 }
 @media (max-width:767px) {
-    section.s1 .container .text {
+    article.s1 .container .text {
         padding-right: 0px;
         text-align: center;
     }
 }
-section.s1 .container .text h3 {
+article.s1 .container .text h3 {
    margin-bottom: 12px;
 }
 @media (max-width:767px) {
-    section.s1 .container .text h3 {
+    article.s1 .container .text h3 {
         margin-bottom: 15px;
         font-size: 20px;
-     }
+    }
 }
-section.s1 .container .text p {
+article.s1 .container .text p {
     font-size: 15px;
     color: hsl(208, 11%, 55%);
     line-height: 1.4;
 }
 @media (max-width:767px) {
-    section.s1 .container .text p {
+    article.s1 .container .text p {
         font-size: 14px;
     }
 }
-section.s1 .container img {
-    width: 40%;
+article.s1 .container img {
+    width: 50%;
 }
 @media (max-width:767px) {
-    section.s1 .container img {
+    article.s1 .container img {
         order: -1;
         width: 100%;
         margin-bottom: 50px;
@@ -190,15 +191,15 @@ section.s1 .container img {
 /*end section 1*/
 
 /*start section 2*/
-section.s2 {
+article.s2 {
     margin: 0 0 40px 0;
 }
 @media (max-width:767px) {
-    section.s2 {
+    article.s2 {
         padding: 0px 20px;
     }
 }
-section.s2 .container {
+article.s2 .container {
     padding: 50px 80px;
     box-shadow: 0 0 10px rgb(223, 223, 223);
     border-radius: 10px;
@@ -207,41 +208,41 @@ section.s2 .container {
     align-items: center;
 }
 @media (max-width:767px) {
-    section.s2 .container {
+    article.s2 .container {
         display: grid;
         padding: 40px 50px;
     }
 }
 @media (max-width:767px) {
-    section.s2 .container .text {
+    article.s2 .container .text {
         text-align: center;
     }
 }
-section.s2 .container .text h3 {
+article.s2 .container .text h3 {
    margin-bottom: 12px;
 }
 @media (max-width:767px) {
-    section.s2 .container .text h3 {
+    article.s2 .container .text h3 {
         margin-bottom: 15px;
         font-size: 20px;
      }
 }
-section.s2 .container .text p {
+article.s2 .container .text p {
     font-size: 15px;
     color: hsl(208, 11%, 55%);
     line-height: 1.4;
 }
 @media (max-width:767px) {
-    section.s2 .container .text p {
+    article.s2 .container .text p {
         font-size: 14px;
     }
 }
-section.s2 .container img {
-    width: 40%;
+article.s2 .container img {
+    width: 50%;
     margin-right: 80px;
 }
 @media (max-width:767px) {
-    section.s2 .container img {
+    article.s2 .container img {
         order: -1;
         width: 100%;
         margin-bottom: 50px;
@@ -250,15 +251,15 @@ section.s2 .container img {
 /*end section 2*/
 
 /*start section 3*/
-section.s3 {
-    margin: 0 0 50px 0;
+article.s3 {
+    margin: 0 0 120px 0;
 }
 @media (max-width:767px) {
-    section.s3 {
+    article.s3 {
         padding: 0 20px;
     }
 }
-section.s3 .container {
+article.s3 .container {
     padding: 50px 80px;
     box-shadow: 0 0 10px rgb(223, 223, 223);
     border-radius: 10px;
@@ -267,44 +268,44 @@ section.s3 .container {
     align-items: center;
 }
 @media (max-width:767px) {
-    section.s3 .container {
+    article.s3 .container {
         display: grid;
         padding: 40px 50px;
     }
 }
-section.s3 .container .text {
+article.s3 .container .text {
     padding-right: 80px;
 }
 @media (max-width:767px) {
-    section.s3 .container .text {
+    article.s3 .container .text {
         padding-right: 0px;
         text-align: center;
     }
 }
-section.s3 .container .text h3 {
+article.s3 .container .text h3 {
    margin-bottom: 12px;
 }
 @media (max-width:767px) {
-    section.s3 .container .text h3 {
+    article.s3 .container .text h3 {
         margin-bottom: 15px;
         font-size: 20px;
      }
 }
-section.s3 .container .text p {
+article.s3 .container .text p {
     font-size: 15px;
     color: hsl(208, 11%, 55%);
     line-height: 1.4;
 }
 @media (max-width:767px) {
-    section.s3 .container .text p {
+    article.s3 .container .text p {
         font-size: 14px;
     }
 }
-section.s3 .container img {
-    width: 40%;
+article.s3 .container img {
+    width: 50%;
 }
 @media (max-width:767px) {
-    section.s3 .container img {
+    article.s3 .container img {
         order: -1;
         width: 100%;
         margin-bottom: 50px;
@@ -317,7 +318,7 @@ footer {
     background-color: hsl(192, 100%, 9%);
     color: rgb(212, 211, 211);
     margin: 0px;
-    padding: 120px 0 50px 0;
+    padding: 160px 0 70px 0;
 }
 @media (max-width:767px) {
     footer {
@@ -452,7 +453,7 @@ main {
     background-color: #fff;
     top:80px;
     margin: 0 auto;
-    padding: 35px 60px;
+    padding: 60px 80px;
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 0 5px rgb(182, 182, 182);
